# zero-copy-ipc

./: CMakeLists.txt  graph.py  run_benchmarks.py
benchmarks/: baseline.py
include/: zcp_ipc.hpp
practice/: shmarray  shmarray.c  shmdemo  shmdemo.c  shmstruct  shmstruct.c
practice/ostep_mem/: memory-user  memory-user.c
src/: py_zpc.cpp  reader.cpp  writer.cpp  xdp_loader  xdp_loader.cpp  xdp_prog.c
tests/: mock_exchange.py  read_shm.py
